<resources>
    <string name="app_name">CleverTapDemoApp</string>
    <string name="add_event">Add event</string>
    <string name="add_event_with_properties">Add Event with Properties</string>
    <string name="add_user_properties">Add User Properties</string>
    <string name="identity">Identity</string>
    <string name="login_sign_up_onuserlogin">Login | Sign UP | OnUserLogin</string>
    <string name="enter_identity_here">Enter Identity Here..!</string>
    <string name="enter_email_here">Enter Email Here..!</string>
    <string name="enter_phone_here">Enter Phone Here..!</string>
    <string name="enter_name_here">Enter name Here..!</string>
    <string name="app_inbox">App Inbox</string>
    <string name="app_inbox_custom">App Inbox Custom</string>
    <string name="add_webhook_event">Add WebHook Event</string>
    <string name="add_in_app">Add In App</string>
    <string name="next_screen">Next screen</string>
    <string name="title_activity_signed_call_login">SignedCallLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>