<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Fixed items -->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <!-- Configurable items (add placeholders here) -->
    <item
        android:id="@+id/navigation_custom1"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Custom1" />

    <item
        android:id="@+id/navigation_custom2"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Custom2" />
</menu>