<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name_here"
                android:layout_marginVertical="8dp"
                android:text="test"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etIdentity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_identity_here"
                android:layout_marginVertical="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_here"
                android:text="test@gmail.com"
                android:layout_marginVertical="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_here"
                android:text="9164611000"
                android:layout_marginVertical="8dp"/>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BtOnUserLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:text="@string/login_sign_up_onuserlogin"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BtAddEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:text="@string/add_event"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BtAddEventWithProperties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_event_with_properties"
                android:textColor="@color/white" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/appInbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_inbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>